# facehouse

./: .gitignore  channel.py  data.py  facehouse.ipynb  facehouse.py  main.py  performance.py  predict.py  presentation.qmd  pyproject.toml
