[project]
name = "facehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "nilearn>=0.11.1",
    "nimare>=0.5.0",
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
